--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>Number Memory Game</h1>
-        <div id="level-info">Level: 1</div>
-        <div id="number-display"></div>
+        <h1>Number Memory Game💡</h1>
+        <div id="level-info" class="box">Level: 1
+        </div>
+        <div id="number-display" class="box"></div>
         <input type="text" id="player-input" style="display: none;" placeholder="Enter numbers here" maxlength="20">
-        <button id="start-btn">Start Game</button>
-        <button id="restart-btn" style="display: none;">Restart Game</button>
-        <div id="game-over-message"></div>
+        <button id="start-btn" class="one">Start Game</button>
+        <button id="restart-btn" class="two" style="display: none;">Restart Game</button>
+        <div id="game-over-message" class="over"></div>
     </div>
     <script src="game.js"></script>
 </body>
