did minor changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="level-info" class="box">Level: 1
         </div>
         <div id="number-display" class="box"></div>
-        <input type="text" id="player-input" style="display: none;" placeholder="Enter numbers here" maxlength="20">
+        <input type="text" id="player-input" style="display: none;" placeholder="Enter numbers here">
         <button id="start-btn" class="one">Start Game</button>
         <button id="restart-btn" class="two" style="display: none;">Restart Game</button>
         <div id="game-over-message" class="over"></div>
